syntax = "proto3";
import "security.proto";

service HelloWorld {
  rpc SayHello (HelloRequest) returns (HelloReply) {
    option security.authed = true;
  }
}
 
message HelloRequest {
  string name = 1;
}
 
message HelloReply {
  string message = 1;
}